# 5_fractol

./: .gitignore  CMakeLists.txt  Makefile  fractol
inc/: fract.h  fract1.h
src/: cntrl_keyboard_core.c  cntrl_mouse_core.c  frac_color.c  frac_core_keyb.c  frac_core_mouse.c  frac_draw.c  frac_julia.c  frac_julia_thread_create.c  frac_key_core.c  frac_mandelbrot.c  frac_mlx.c  frac_ui.c  fract.c  fractal_error.c  fractal_mlx.c  fractal_put_pixel.c  fractal_ui.c  ft_hsv_to_rgb.c  hsv_color.c  hsv_to_rgb.c  julia_core.c  julia_threads_core.c  julia_worker.c  main.c  mandelbrot_core.c  mandelbrot_worker.c  ship_core.c  ship_worker.c  threads_core.c
